--- a/lab-python-flow-control.ipynb
+++ b/lab-python-flow-control.ipynb
@@ -37,6 +37,24 @@
     "\n",
     "3. Instead of updating the inventory by subtracting 1 from the quantity of each product, only do it for  the products that were ordered (those in \"customer_orders\")."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "07831dd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello\")"
+   ]
   }
  ],
  "metadata": {
@@ -55,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
