--- a/lab-python-flow-control.ipynb
+++ b/lab-python-flow-control.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "0c70c393",
    "metadata": {},
    "outputs": [
@@ -71,14 +71,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'t-shirt': 3, 'mug': 5, 'hat': 7, 'book': 10, 'keychain': 30}\n"
+      "{'t-shirt': 5, 'mug': 6, 'hat': 7, 'book': 8, 'keychain': 9}\n"
      ]
     }
    ],
    "source": [
     "#1.3\n",
     "\n",
-    "for i in range(5):\n",
+    "for i in range(len(products)):\n",
     "   product = input(\"Enter the product: \")\n",
     "   quantity = int(input(\"Enter the quantity available: \"))\n",
     "   inventory[product] = quantity\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "996328c1",
    "metadata": {},
    "outputs": [],
@@ -100,29 +100,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "d3dd172d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'hat', 'mug', 'book'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#1.5\n",
     "\n",
     "for i in range(3):\n",
-    "   product_choice = input(\"Enter the  product that you want to order: \")\n",
+    "   product_choice = input(\"Enter the product that you want to order: \")\n",
     "   customer_orders.add(product_choice)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "f288d276",
    "metadata": {},
    "outputs": [
@@ -142,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "d0a1d54f",
    "metadata": {},
    "outputs": [],
@@ -157,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "c64a14ee",
    "metadata": {},
    "outputs": [
@@ -167,7 +159,7 @@
      "text": [
       "Order Statistics:\n",
       "Total Products Ordered: 3\n",
-      "Percentage of Products Ordered: 5.454545454545454\n"
+      "Percentage of Products Ordered: 8.571428571428571\n"
      ]
     }
    ],
@@ -181,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "2f552f69",
    "metadata": {},
    "outputs": [],
@@ -195,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "488b7fc4",
    "metadata": {},
    "outputs": [
@@ -203,27 +195,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-shirts Availabes:  2\n",
-      "Mugs Availabes:  4\n",
-      "Hats Availabes:  6\n",
-      "Books Availabes:  9\n",
-      "Keychains Availabes:  19\n"
+      "t-shirt available: 4\n",
+      "mug available: 5\n",
+      "hat available: 6\n",
+      "book available: 7\n",
+      "keychain available: 8\n"
      ]
     }
    ],
    "source": [
     "#1.10\n",
     "\n",
-    "print(\"T-shirts Availabes: \", inventory[\"t-shirt\"])\n",
-    "print(\"Mugs Availabes: \", inventory[\"mug\"])\n",
-    "print(\"Hats Availabes: \", inventory[\"hat\"])\n",
-    "print(\"Books Availabes: \", inventory[\"book\"])\n",
-    "print(\"Keychains Availabes: \", inventory[\"keychain\"])"
+    "for k,v in inventory.items():\n",
+    "    print(k, \"available:\", v)\n",
+    "\n",
+    "\n",
+    "# print(\"T-shirts Availabes: \", inventory[\"t-shirt\"])\n",
+    "# print(\"Mugs Availabes: \", inventory[\"mug\"])\n",
+    "# print(\"Hats Availabes: \", inventory[\"hat\"])\n",
+    "# print(\"Books Availabes: \", inventory[\"book\"])\n",
+    "# print(\"Keychains Availabes: \", inventory[\"keychain\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "1df250ec",
    "metadata": {},
    "outputs": [
@@ -231,7 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'hat', 'mug', 'book'}\n"
+      "{'mug', 'hat', 'book'}\n"
      ]
     }
    ],
@@ -257,7 +253,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
+   "id": "cfb06444",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'t-shirt': 4, 'mug': 5, 'hat': 6, 'book': 7, 'keychain': 8}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inventory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "dca89b1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'book', 'hat', 'mug'}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer_orders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "6e203d9f",
    "metadata": {},
    "outputs": [
@@ -265,16 +303,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'t-shirt': 2, 'mug': 4, 'hat': 6, 'book': 9, 'keychain': 19}\n"
+      "{'t-shirt': 4, 'mug': 4, 'hat': 5, 'book': 6, 'keychain': 8}\n"
      ]
     }
    ],
    "source": [
     "#3\n",
     "\n",
-    "for k in inventory.keys():\n",
-    "    if k == customer_orders:\n",
-    "        inventory(k) - customer_orders\n",
+    "for product in customer_orders:\n",
+    "      if product in inventory:\n",
+    "          inventory[product] -= 1\n",
     "\n",
     "print(inventory)"
    ]
